<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.ampf</groupId>
  <artifactId>MultiThreading</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>MultiThreadinggger</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <logback.versen>1.4.11</logback.versen>
  </properties>

  <dependencies>


    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.versen}</version>
      <scope>provided</scope>
    </dependency>

  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>21</source>
          <target>21</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>


      <plugin>
        <!-- Maven Plugin used to build WAR archive-->
        <artifactId>maven-war-plugin</artifactId>
        <version>2.0</version>
        <configuration>
          <!-- Directory for Web application-->
          <webappDirectory>webapp</webappDirectory>
          <webResources></webResources>
        </configuration>
      </plugin>

      <!--      <plugin>-->
<!--        <groupId>org.springframework.boot</groupId>-->
<!--        <artifactId>spring-boot-maven-plugin</artifactId>-->
<!--      </plugin>-->

    </plugins>
  </build>
</project>
